--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     :root {
       --bg-color: #f0f2f5;
       --card-bg: #ffffff;
-      --primary: #0d47a1; /* Глубокий синий для доверия */
+      --primary: #0d47a1; /* Глубокий синий */
       --green: #2e7d32;   /* Денежный зеленый */
       --red: #d32f2f;     /* Акцент */
       --yellow-bg: #fff9c4;
@@ -38,12 +38,12 @@
     .header {
       background: var(--primary);
       color: white;
-      padding: 25px 20px 40px 20px; /* Большой отступ снизу для врезки блока */
+      padding: 25px 20px 45px 20px; /* Отступ снизу под плашку */
       text-align: center;
       border-bottom-left-radius: 25px;
       border-bottom-right-radius: 25px;
       position: relative;
-      margin-bottom: 50px; /* Место под плашку совета */
+      margin-bottom: 50px;
     }
 
     .header h1 {
@@ -55,24 +55,15 @@
 
     .header .subtitle {
       margin: 8px 0 0;
-      font-size: 14px;
+      font-size: 15px;
       opacity: 0.9;
       font-weight: 400;
-    }
-
-    .date-badge {
-      display: inline-block;
-      background: rgba(255,255,255,0.2);
-      padding: 4px 10px;
-      border-radius: 20px;
-      font-size: 12px;
-      margin-bottom: 10px;
     }
 
     /* CONVERSION BOOSTER BOX (Совет) */
     .tip-box {
       width: 90%;
-      margin: -30px auto 20px auto; /* Отрицательный маргин чтобы наехать на хедер */
+      margin: -35px auto 20px auto; /* Наезжает на хедер */
       background: var(--yellow-bg);
       border: 1px solid var(--yellow-border);
       border-radius: 12px;
@@ -82,11 +73,11 @@
       z-index: 10;
       text-align: left;
       display: flex;
-      gap: 10px;
-      align-items: center;
+      gap: 12px;
+      align-items: flex-start;
     }
 
-    .tip-icon { font-size: 24px; }
+    .tip-icon { font-size: 24px; line-height: 1; }
     .tip-text { font-size: 13px; line-height: 1.4; color: #f57f17; font-weight: 600; }
     .tip-text b { color: #e65100; text-decoration: underline; }
 
@@ -113,13 +104,13 @@
       font-size: 11px;
       color: var(--green);
       background: #e8f5e9;
-      padding: 2px 8px;
+      padding: 3px 8px;
       border-radius: 4px;
       font-weight: 700;
       display: flex;
       align-items: center;
-      gap: 4px;
-      margin-bottom: 8px;
+      gap: 5px;
+      margin-bottom: 10px;
       width: fit-content;
     }
     .prob-badge::before {
@@ -160,8 +151,8 @@
     }
     
     .info-item { display: flex; flex-direction: column; }
-    .info-label { color: var(--text-sec); font-size: 11px; }
-    .info-val { font-weight: 700; color: var(--text); }
+    .info-label { color: var(--text-sec); font-size: 11px; margin-bottom: 2px; }
+    .info-val { font-weight: 700; color: var(--text); font-size: 14px; }
 
     /* BUTTONS */
     .cta-btn {
@@ -193,6 +184,13 @@
       100% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(46, 125, 50, 0); }
     }
 
+    .footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 12px;
+      color: #999;
+      background: #fafafa;
+    }
   </style>
 </head>
 <body>
@@ -200,7 +198,6 @@
 <div class="canvas-container">
   
   <header class="header">
-    <div class="date-badge">📅 Hoy: <span id="currentDate"></span></div>
     <h1>Dinero Rápido México</h1>
     <p class="subtitle">Aprobación verificada en minutos</p>
   </header>
@@ -283,7 +280,7 @@
         <div class="offer-logo-name"><h3>TurboPeso</h3></div>
       </div>
       <div class="info-grid">
-        <div class="info-item"><span class="info-label">Máximo:</span><span class="info-val">$30,000 MXN</span></div>
+        <div class="info-item"><span class="info-label">Máximo:</span><span class="info-val">$30,000</span></div>
         <div class="info-item"><span class="info-label">Geo:</span><span class="info-val">Todo México</span></div>
       </div>
       <a href="https://link.lead-cash.com/click?pid=1141&offer_id=671" class="cta-btn">Solicitar</a>
@@ -412,15 +409,11 @@
     </div>
 
   </div>
-</div>
 
-<script>
-  // Скрипт для подстановки даты на испанском (Пример: 25 de Enero)
-  const dateElement = document.getElementById('currentDate');
-  const options = { day: 'numeric', month: 'long' };
-  const today = new Date();
-  dateElement.innerText = today.toLocaleDateString('es-MX', options);
-</script>
+  <div class="footer">
+    <p>© 2025 Préstamos Rápidos MX. Todos los derechos reservados.</p>
+  </div>
+</div>
 
 </body>
 </html>
